[gd_scene load_steps=30 format=3 uid="uid://b87pv5tdus0n1"]

[ext_resource type="Script" path="res://Script/Entity/Ally/Sentry.gd" id="1_p5opd"]
[ext_resource type="Texture2D" uid="uid://dik154n0yd471" path="res://Asset/Weapon/Sentry.png" id="2_6cysm"]
[ext_resource type="FontFile" uid="uid://dnn1v6dh33b66" path="res://Asset/UI/Font/Tourney_SemiExpanded-Medium.ttf" id="3_d3jyk"]
[ext_resource type="Texture2D" uid="uid://dqcn2p3c0ebm1" path="res://Asset/Weapon/Laser_sight.png" id="3_ucrr4"]
[ext_resource type="Texture2D" uid="uid://0ec7pv1cihxj" path="res://Asset/Weapon/Light.png" id="3_v1vgc"]
[ext_resource type="Texture2D" uid="uid://hp4y52i3sucv" path="res://Asset/Monster/UI/Life_bar_3.png" id="5_l2mw1"]
[ext_resource type="Texture2D" uid="uid://cwbi38uva8f4c" path="res://Asset/Monster/UI/Life_bar_1.png" id="6_f2ctb"]
[ext_resource type="Script" path="res://Script/Entity/Ally/SentryPick.gd" id="6_tqbs7"]
[ext_resource type="Texture2D" uid="uid://fdgwgj0mjjg7" path="res://Asset/Monster/UI/Life_bar_2.png" id="7_dvc72"]
[ext_resource type="Texture2D" uid="uid://dfdj6d3pf236p" path="res://Asset/UI/Bar/skill_bar_1.png" id="8_ojnwf"]
[ext_resource type="Texture2D" uid="uid://tuewqwtwg4kg" path="res://Asset/UI/Bar/skill_bar_2.png" id="9_u64r7"]
[ext_resource type="AudioStream" uid="uid://6ty7nfpe7y84" path="res://Asset/Weapon/Sound/Chaser_shoot.mp3" id="11_nqmlh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h68d0"]
size = Vector2(80, 300)

[sub_resource type="Curve" id="Curve_s1pwt"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.24058, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_58nq6"]
offsets = PackedFloat32Array(0, 0.213376, 1)
colors = PackedColorArray(0.501961, 0.501961, 0.501961, 0, 0.5, 0.5, 0.5, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_f2mp1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_b7rr8"]
offsets = PackedFloat32Array(0, 0.684713, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0.313726, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_rt6vj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_0do5t"]
colors = PackedColorArray(0.5, 0.5, 0.5, 0.392157, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_mpsvu"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hub/Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hub/Gun/Pod:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hub/Gun/Mag:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/LegF:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LegB:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Hub/Gun:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Hub/Flash/PointLight2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Hub/Gun/Muzzle:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26, 2)]
}

[sub_resource type="Animation" id="Animation_h15lo"]
resource_name = "Shoot"
length = 0.100003
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hub/Gun:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hub/Gun/Pod:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hub/Gun/Mag:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/LegF:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LegB:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/Hub/Gun:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.0174533, 0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/Hub/Flash/PointLight2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.025, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Hub/Gun/Muzzle:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.025, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(26, 2), Vector2(16, 2), Vector2(26, 2), Vector2(26, 2)]
}

[sub_resource type="Animation" id="Animation_cirxr"]
resource_name = "Starting_Down"
length = 2.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hub/Gun:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -24), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hub/Gun:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.5708, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hub/Gun/Pod:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5708, 0.785398, 0.785398]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hub/Gun/Mag:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LegF:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-2.35619, -0.436332, -0.436332, 0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/LegB:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.785398, 0.785398, 0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Hub/Gun/Muzzle:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5, 2), Vector2(26, 2), Vector2(26, 2)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Hub/Gun/Label:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.2, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1wxct"]
resource_name = "Starting_Left"
length = 2.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hub/Gun:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -24), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hub/Gun:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.5708, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hub/Gun/Pod:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5708, 0.785398, 0.785398]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hub/Gun/Mag:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LegF:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-2.35619, -0.436332, -0.436332, 0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/LegB:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.785398, 0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Hub/Gun/Muzzle:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5, 2), Vector2(26, 2), Vector2(26, 2)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Hub/Gun/Label:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.2, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_voh24"]
resource_name = "Starting_Right"
length = 2.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hub/Gun:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -24), Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hub/Gun:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, -1.5708, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hub/Gun/Pod:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5708, 0.785398, 0.785398]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hub/Gun/Mag:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/LegF:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-2.35619, -0.436332, -0.436332, 0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/LegB:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.785398, 0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Body/Hub/Gun/Muzzle:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5, 2), Vector2(26, 2), Vector2(26, 2)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/Hub/Gun/Label:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.2, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vuy0w"]
_data = {
"Idle": SubResource("Animation_mpsvu"),
"Shoot": SubResource("Animation_h15lo"),
"Starting_Down": SubResource("Animation_cirxr"),
"Starting_Left": SubResource("Animation_1wxct"),
"Starting_Right": SubResource("Animation_voh24")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63pgu"]
size = Vector2(44, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w1hv"]
size = Vector2(60, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o66ci"]
size = Vector2(24, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvmc8"]
size = Vector2(55, 87)

[node name="Sentry" type="RigidBody2D"]
collision_layer = 21
mass = 25.0
gravity_scale = 0.0
freeze_mode = 1
angular_damp = 5.0
script = ExtResource("1_p5opd")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("2_6cysm")
offset = Vector2(-1, -22)
hframes = 4
vframes = 3
frame = 2

[node name="Hub" type="Marker2D" parent="Body"]
position = Vector2(-2, -18)

[node name="Fire" type="Marker2D" parent="Body/Hub"]
position = Vector2(27, 0)

[node name="Gun" type="Sprite2D" parent="Body/Hub"]
z_index = -1
texture = ExtResource("2_6cysm")
offset = Vector2(20, -5)
hframes = 4
vframes = 3
frame = 1

[node name="Pod" type="Sprite2D" parent="Body/Hub/Gun"]
position = Vector2(-27, -25)
rotation = 0.785398
texture = ExtResource("2_6cysm")
hframes = 4
vframes = 3
frame = 7

[node name="Muzzle" type="Sprite2D" parent="Body/Hub/Gun"]
position = Vector2(26, 2)
texture = ExtResource("2_6cysm")
offset = Vector2(31, -7)
hframes = 4
vframes = 3
frame = 8

[node name="Aim" type="PointLight2D" parent="Body/Hub/Gun"]
position = Vector2(-3, -20)
scale = Vector2(7, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("3_ucrr4")
offset = Vector2(100, 0)

[node name="FocusU" type="PointLight2D" parent="Body/Hub/Gun/Aim"]
shadow_enabled = true
texture = ExtResource("3_ucrr4")
offset = Vector2(100, 0)

[node name="FocusD" type="PointLight2D" parent="Body/Hub/Gun/Aim"]
shadow_enabled = true
texture = ExtResource("3_ucrr4")
offset = Vector2(100, 0)

[node name="Mag" type="Sprite2D" parent="Body/Hub/Gun"]
show_behind_parent = true
position = Vector2(-22, 9)
texture = ExtResource("2_6cysm")
hframes = 4
vframes = 3
frame = 6

[node name="Load" type="Marker2D" parent="Body/Hub/Gun"]
position = Vector2(-21, 1)

[node name="Detech" type="RayCast2D" parent="Body/Hub/Gun"]
z_index = -1
position = Vector2(9.53674e-07, 1.90735e-06)
target_position = Vector2(1280, 0)
collision_mask = 4
collide_with_areas = true

[node name="DetechUp" type="RayCast2D" parent="Body/Hub/Gun"]
z_index = -1
position = Vector2(1.43051e-06, 3.8147e-06)
rotation = -0.279253
target_position = Vector2(1280, 0)
collision_mask = 4
collide_with_areas = true

[node name="Tracker" type="ShapeCast2D" parent="Body/Hub/Gun/DetechUp"]
visible = false
z_index = -1
shape = SubResource("RectangleShape2D_h68d0")
target_position = Vector2(1280, 0)
collision_mask = 4
collide_with_areas = true

[node name="DetechDown" type="RayCast2D" parent="Body/Hub/Gun"]
z_index = -1
position = Vector2(2.14577e-06, 3.8147e-06)
rotation = 0.279253
target_position = Vector2(1280, 0)
collision_mask = 4
collide_with_areas = true

[node name="Tracker" type="ShapeCast2D" parent="Body/Hub/Gun/DetechDown"]
visible = false
z_index = -1
shape = SubResource("RectangleShape2D_h68d0")
target_position = Vector2(1280, 0)
collision_mask = 4
collide_with_areas = true

[node name="Detech1" type="RayCast2D" parent="Body/Hub/Gun"]
z_index = -1
position = Vector2(-4.76837e-07, 0)
rotation = -0.139626
target_position = Vector2(1280, 0)
collision_mask = 4
collide_with_areas = true

[node name="Detech2" type="RayCast2D" parent="Body/Hub/Gun"]
z_index = -1
position = Vector2(-4.76837e-07, 0)
rotation = 0.139626
target_position = Vector2(1280, 0)
collision_mask = 4
collide_with_areas = true

[node name="Smoke" type="CPUParticles2D" parent="Body/Hub/Gun"]
show_behind_parent = true
position = Vector2(65, 0)
emitting = false
amount = 100
one_shot = true
speed_scale = 0.5
randomness = 1.0
lifetime_randomness = 1.0
spread = 0.0
gravity = Vector2(0, -980)
initial_velocity_max = 10.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
damping_min = 50.0
damping_max = 100.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_s1pwt")
color_ramp = SubResource("Gradient_58nq6")

[node name="RotateR" type="RayCast2D" parent="Body/Hub/Gun"]
position = Vector2(90, -50)
target_position = Vector2(0, 100)
collision_mask = 16

[node name="RotateL" type="RayCast2D" parent="Body/Hub/Gun"]
position = Vector2(-30, 0)
target_position = Vector2(-30, 0)
collision_mask = 16

[node name="Band" type="Sprite2D" parent="Body/Hub/Gun"]
z_index = 1
texture = ExtResource("2_6cysm")
hframes = 4
vframes = 3
frame = 3

[node name="Label" type="Label" parent="Body/Hub/Gun"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -58.0
offset_right = 1.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(19, 12)
theme_override_fonts/font = ExtResource("3_d3jyk")
theme_override_font_sizes/font_size = 20
text = "00"
vertical_alignment = 1

[node name="Flash" type="CPUParticles2D" parent="Body/Hub"]
position = Vector2(65, 0)
emitting = false
amount = 100
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
local_coords = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_f2mp1")
color_ramp = SubResource("Gradient_b7rr8")

[node name="Flash2" type="CPUParticles2D" parent="Body/Hub/Flash"]
show_behind_parent = true
emitting = false
amount = 100
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
local_coords = true
spread = 120.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_f2mp1")
color_ramp = SubResource("Gradient_b7rr8")

[node name="PointLight2D" type="PointLight2D" parent="Body/Hub/Flash"]
scale = Vector2(1e-05, 1e-05)
range_layer_max = 5
texture = ExtResource("3_v1vgc")

[node name="Gas" type="CPUParticles2D" parent="Body/Hub"]
z_index = 1
position = Vector2(65, 0)
emitting = false
amount = 200
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
spread = 120.0
gravity = Vector2(0, 0)
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_rt6vj")
color_ramp = SubResource("Gradient_0do5t")

[node name="LegF" type="Sprite2D" parent="Body"]
position = Vector2(7, 9)
texture = ExtResource("2_6cysm")
offset = Vector2(37, 3)
hframes = 4
vframes = 3
frame = 5

[node name="Collision" type="Marker2D" parent="Body/LegF"]
position = Vector2(43, 17)

[node name="LegB" type="Sprite2D" parent="Body"]
position = Vector2(-5, 9)
texture = ExtResource("2_6cysm")
offset = Vector2(-4, 3)
hframes = 4
vframes = 3
frame = 4

[node name="Collision" type="Marker2D" parent="Body/LegB"]
position = Vector2(-12, 17)

[node name="Rotate" type="Marker2D" parent="Body"]
position = Vector2(-2, -18)

[node name="Recoil" type="Marker2D" parent="Body"]
position = Vector2(-2, -18)

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vuy0w")
}

[node name="CollisionBody" type="CollisionShape2D" parent="."]
z_index = -5
position = Vector2(-5, -21.5)
shape = SubResource("RectangleShape2D_63pgu")

[node name="CollisionLegF" type="CollisionShape2D" parent="."]
z_index = -5
position = Vector2(50.5, 26)
shape = SubResource("RectangleShape2D_7w1hv")

[node name="CollisionLegB" type="CollisionShape2D" parent="."]
z_index = -5
position = Vector2(-17, 26)
shape = SubResource("RectangleShape2D_o66ci")

[node name="HP" type="TextureProgressBar" parent="."]
offset_left = -51.0
offset_top = -86.0
offset_right = 53.0
offset_bottom = -46.0
max_value = 200.0
texture_under = ExtResource("5_l2mw1")
texture_over = ExtResource("6_f2ctb")
texture_progress = ExtResource("7_dvc72")

[node name="Pick" type="TextureProgressBar" parent="."]
offset_left = -26.0
offset_top = -112.0
offset_right = 78.0
offset_bottom = -72.0
max_value = 60.0
texture_over = ExtResource("8_ojnwf")
texture_progress = ExtResource("9_u64r7")

[node name="Firedelay" type="Timer" parent="."]
one_shot = true

[node name="Deploy" type="Timer" parent="."]
one_shot = true

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_nqmlh")
max_distance = 6000.0
max_polyphony = 50

[node name="Grounded" type="RayCast2D" parent="."]
collision_mask = 16

[node name="HitBox" type="Area2D" parent="." groups=["stuff"]]
collision_layer = 9
collision_mask = 9
script = ExtResource("6_tqbs7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-4.5, -11.5)
shape = SubResource("RectangleShape2D_fvmc8")

[connection signal="area_entered" from="HitBox" to="." method="hurt"]
